--- a/vignettes/using_ox.Rmd
+++ b/vignettes/using_ox.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Using ox"
+title: "Getting OpenClinica data into R"
 author: "Albert Cobos"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Using ox}
+  %\VignetteIndexEntry{Getting OpenClinica data into R}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -16,15 +16,38 @@ knitr::opts_chunk$set(
 )
 ```
 
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
+The `ox` package provides functions to get [OpenClinica](https://www.openclinica.com/community-edition-open-source-edc/) data into R. OpenClinica offers several formats for export files, the most complete ones being the CDISC ODM formats. 
 
-- Never uses retina figures
-- Has a smaller default figure size
-- Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
+The `ox` package has been developped and tested with the three availabe ODM 1.3 export formats in OpenClinica version 3.3:  
 
-## Vignette Info
+- CDISC ODM XML 1.3 Clinical Data
+- CDISC ODM XML 1.3 Clinical Data with OpenClinica extensions
+- CDISC ODM XML 1.3 Full with OpenClinica extensions
 
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
+To use the `ox` package, you will need to:
+- Dowload on of these file formats (.zip file), and 
+- Unzip the downloaded file.
+
+## The fast way
+
+For most users, the most convenient way to proceed is as follows. 
+
+First, you need to parse the xml file:
+
+```{r}
+# your (unziped) xml export file
+xml_file <- system.file("extdata",
+                        "odm1.3_clinical_ext_example_Optimal.xml",
+                        package = "ox",
+                        mustWork = TRUE)
+library(ox)
+
+# Parsing the xml file
+doc <- xmlParse(xml_file)
+```
+
+
+to use function `ox_all()` from a parsed.
 
 ## Styles
 
