--- a/vignettes/using_ox.Rmd
+++ b/vignettes/using_ox.Rmd
@@ -212,4 +212,4 @@ The following functions are provided in the `ox` package:
     - ox_codelist_ref 
     - ox_measurement_units 
     - ox_sites 
-    - ox_subject_data 
+    - ox_subjects 
