Rename function ox_measurement_units() to ox_units()

--- a/vignettes/using_ox.Rmd
+++ b/vignettes/using_ox.Rmd
@@ -210,6 +210,6 @@ The following functions are provided in the `ox` package:
     - ox_codelist 
     - ox_codelist_item 
     - ox_codelist_ref 
-    - ox_measurement_units 
+    - ox_units 
     - ox_sites 
     - ox_subjects 
