--- a/README.Rmd
+++ b/README.Rmd
@@ -36,6 +36,9 @@ terminology), e.g., for demographic data.
 
 First, load packages `XML`and `ox`. Then parse the xml file using `xmlParse` 
 from package `XML`, and use function `ox_all()` to create an `ox_all` object. 
+This involves reading data and metadata, and is a slow process. It may take a 
+lot of time with any real study!
+
 With `ox_info()` you will see some basic information of this object.
 
 ```{r example}
@@ -53,7 +56,7 @@ xml_file <- system.file("extdata",
 # parse the xml file
 doc <- xmlParse(xml_file) 
 
-# create an (ox_all) object containing data and metadata
+# create an (ox_all) object 
 d <- ox_all(doc)
 
 # get basic info
