load library devtools before install_github

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,6 +25,7 @@ containing both) from parsed xml files. Also, tidy dataframes can be created for
 You can install the development version of `ox` from [GitHub](https://github.com/acobos/ox) with:
 
 ``` r
+library(devtools)
 install_github("acobos/ox")
 ```
 
